# async-format

./: CHANGELOG.md  Cargo.toml
examples/: slow_format.rs
src/: lib.rs
